--- a/index.html
+++ b/index.html
@@ -6,13 +6,45 @@
     <title>Broadway</title>
   </head>
   <body>
-    <div class="broadway">
+    <div id="broadway">
       <h1>Broadway Design</h1>
-      <a href="#">Home</a><br>
-      <a href="#">Process</a><br>
-      <a href="#">Work</a><br>
-      <a href="#">Team</a><br>
-      <a href="#">Contact</a><br>
+      <a href="#broadway">Home</a><br>
+      <a href="#process">Process</a><br>
+      <a href="#portfolio">Work</a><br>
+      <a href="#team">Team</a><br>
+      <a href="#contact">Contact</a><br>
+    </div>
+
+    <div id="process">
+      <h2>Our Process</h2>
+      <img src="resources\images\identify.svg" alt="identify!">
+      <h3>Identify</h3>
+        <p>We focus on the most important details</p>
+      <img src="resources\images\understand.svg" alt="understand!">
+      <h3>Understand</h3>
+        <p>We study our projects inside and out.</p>
+      <img src="resources\images\execute.svg" alt="execute!">
+      <h3>Execute</h3>
+        <p>We put everything we have into our work</p>
+    </div>
+
+    <h2 class="design">Designed in New York</h2>
+
+    <div id="portfolio">
+      <h3>Portfolio</h3>
+        <p>Coming soon</p>
+    </div>
+
+    <div id="team">
+      <h3>Team</h3>
+        <p>Wer'e Hiring!</p>
+    </div>
+
+    <div id="contact">
+      <h3>Contact</h3>
+        <p>Phone: (555)-555-5555 <br>
+          E-mail:test@example.com <br>
+          Twitter: @test</p>
     </div>
 
   </body>
