--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           E-mail:test@example.com <br>
           Twitter: @test</p>
     </div>
-
+    <footer>© Broadway 2017 <a href="#broadway">Home</a> <a href="#">About</a> <a href="#portfolio">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></footer>
   </body>
+
 </html>
